Fri Jun 28 08:06:22 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigand_int): Add arguments, xn and hibitsx.
	  Use twocomp2abs_bang.

Thu Jun 27 23:58:13 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (abs2twocomp_bang): Removed.
	  (abs2twocomp): Take n_ret argument to return actual length.
	  (rb_big_and): Follow above change.

Thu Jun 27 22:52:19 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (get2comp): Use bary_2comp.
	  (abs2twocomp_bang): New function.
	  (abs2twocomp): New function.
	  (twocomp2abs_bang): New function.
	  (rb_big_and): Use abs2twocomp and twocomp2abs_bang.

Thu Jun 27 20:03:13 2013  CHIKANAGA Tomoyuki  <nagachika@ruby-lang.org>

	* ext/openssl/lib/openssl/ssl.rb (verify_certificate_identity): fix
	  hostname verification. Patched by nahi.

	* test/openssl/test_ssl.rb (test_verify_certificate_identity): test for
	  above.


Thu Jun 27 00:23:57 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_big_pow): Retry if y is a Bignum and it is
	  representable as a Fixnum.
	  Use rb_absint_numwords.

Wed Jun 26 23:53:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_save_rounding_mode): fix typo.
	  Fixes GH-343. Patch by @jgarber.

Wed Jun 26 23:22:21 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enumerator.c (rb_enumeratorize_with_size): use strict definition
	  rb_enumerator_size_func.

Wed Jun 26 23:11:14 2013  Kouhei Sutou  <kou@cozmixng.org>

	* gc.c (is_before_sweep): Add a missing space before a parenthesis.
	* gc.c (rb_gc_force_recycle): Add a missing space around a parenthesis.

Wed Jun 26 22:44:00 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/intern.h (rb_enumeratorize_with_size): cast for
	  backward compatibility.

	* include/ruby/intern.h (rb_enumerator_size_func): define strict
	  function declaration for rb_enumeratorize_with_size().

Wed Jun 26 21:01:22 2013  Hiroshi Shirosaki  <h.shirosaki@gmail.com>
